--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -286,6 +286,13 @@ fieldset {
 			font-size: 1.5em;
 		}
 	}
+	.form {
+		width: 95%;
+	}
+	fieldset {
+		width: 60%;
+		margin: 0 2.8em;
+	}
 	#about {
 		margin: 0 1em;
 	}
